[gd_scene load_steps=8 format=1]

[ext_resource path="res://scn/button.gd" type="Script" id=1]
[ext_resource path="res://art/button_off.png" type="Texture" id=2]
[ext_resource path="res://art/l1_g.png" type="Texture" id=3]
[ext_resource path="res://art/l2_g.png" type="Texture" id=4]
[ext_resource path="res://art/l3_g.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.9739
height = 20.8221

[sub_resource type="Animation" id=2]

length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ligths1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2.5, 5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -15.9606, -9.8219 ), Vector2( 0, 0 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("ligths2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 2.5, 5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( -17.1883, 24.5547 ), Vector2( 0, 0 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("ligths3:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 2.5, 5 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 46.6541, 7.36642 ), Vector2( 0, 0 ) ] }

[node name="button" type="Node2D"]

script/script = ExtResource( 1 )
color_modulate = null

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 5.35295, 0, 0, 1.36249, 1.02515, 1.57594 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="Area2D"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

visibility/visible = false
transform/pos = Vector2( 1.02515, 1.57594 )
transform/scale = Vector2( 5.35295, 1.36249 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="lights" type="Node2D" parent="."]

editor/display_folded = true

[node name="ligths1" type="Sprite" parent="lights"]

transform/pos = Vector2( -14.7932, -9.10353 )
texture = ExtResource( 3 )

[node name="ligths2" type="Sprite" parent="lights"]

transform/pos = Vector2( -15.9311, 22.7588 )
texture = ExtResource( 4 )

[node name="ligths3" type="Sprite" parent="lights"]

transform/pos = Vector2( 43.2418, 6.82765 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="lights"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/light1 = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "light1"

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]

[connection signal="mouse_enter" from="Area2D" to="." method="_on_Area2D_mouse_enter"]

[connection signal="mouse_exit" from="Area2D" to="." method="_on_Area2D_mouse_exit"]


